--- a/css/app.css
+++ b/css/app.css
@@ -3958,6 +3958,13 @@ article .article__hd {
   color: #e6e6e6;
   padding-bottom: 0.5rem; }
 
+.profImg {
+  height: 100%;
+  width: 7.5rem;
+  background: url("../img/prf.png") no-repeat;
+  background-size: 80%;
+  background-position: center center; }
+
 .topCategory {
   font-size: 1.75rem; }
 
@@ -4094,3 +4101,53 @@ article .article__hd {
               transform: skewX(-45deg) translateX(13.5em);
       -webkit-transition: all 0.5s ease-in-out;
       transition: all 0.5s ease-in-out; }
+
+.border-bottom li {
+  float: left;
+  box-sizing: border-box;
+  list-style-type: none;
+  margin: 0.625rem 0.875rem; }
+  .border-bottom li::after {
+    content: "";
+    background-color: red;
+    height: 0;
+    bottom: 0;
+    display: block;
+    -webkit-transition: all .2s;
+    transition: all .2s; }
+  .border-bottom li:hover::after {
+    height: 0.25rem;
+    bottom: -0.25rem; }
+
+/* Effect 21: borders slight translate */
+.cl-effect-21 li {
+  float: left;
+  list-style: none; }
+
+.cl-effect-21-wrap {
+  height: 60px; }
+
+.cl-effect-21 a {
+  padding: 10px;
+  color: red;
+  font-weight: 700;
+  text-shadow: none;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s; }
+
+.cl-effect-21 a::before,
+.cl-effect-21 a::after {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: blue;
+  content: '';
+  opacity: 1;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0); }
