--- a/scss/block.scss
+++ b/scss/block.scss
@@ -23,6 +23,16 @@ article{
 // トップページ
 // **************************
 
+.profImg{
+	// display: inline-block;
+	height: 100%;
+	width : rem-calc(120);
+	background : url('../img/prf.png') no-repeat;
+	background-size: 80%;
+	background-position: center center;
+
+}
+
 .topCategory{
 	font-size : rem-calc(28);
 }
@@ -203,11 +213,101 @@ $color: #2194E0;
 // メニュー
 // **************************
 
+.border-bottom{
+	li{
+		float : left;
+		box-sizing : border-box;
+		list-style-type: none;
+		margin : rem-calc(10) rem-calc(14);
+
+		&::after{
+			content : "";
+			background-color: red;
+			height:0;
+			bottom:0;
+			display: block;
+			transition : all .2s;
+			// box-sizing : border-box;
+			// border-bottom : 5px solid red;
+		}
+
+		&:hover{
+			&::after{
+				height:rem-calc(4);
+				bottom:rem-calc(-4);
+			}
+		}
+	}
+}
 
 
+/* Effect 21: borders slight translate */
+.cl-effect-21 li{
+	float: left;
+	list-style: none;
+}
 
+.cl-effect-21-wrap{
+	height:60px;
+}
 
+.cl-effect-21 a {
+	padding: 10px;
+	color: red;
+	font-weight: 700;
+	text-shadow: none;
+	transition: color 0.3s;
+}
 
+.cl-effect-21 a::before,
+.cl-effect-21 a::after {
+	position: absolute;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background: blue;
+	content: '';
+	opacity: 1;
+	transition: opacity 0.3s, transform 0.3s;
+	transform: translateY(0);
+}
+
+// .cl-effect-21 a::before {
+// 	top: 0;
+// 	transform: translateY(-10px);
+// }
+
+// .cl-effect-21 a::after {
+// 	bottom: 0;
+// 	transform: translateY(10px);
+// }
+
+// .cl-effect-21 a:hover,
+// .cl-effect-21 a:focus {
+// 	color: red;
+// }
+
+// .cl-effect-21 a:hover::before,
+// .cl-effect-21 a:focus::before,
+// .cl-effect-21 a:hover::after,
+// .cl-effect-21 a:focus::after {
+// 	opacity: 1;
+// 	transform: translateY(0px);
+// }
+
+// .test{
+// 	height : 30px;
+// 	width : 30px;
+// 	border-radius: 100px;
+// 	background-color: $dark-gray;
+
+// 	transition : all .3s;
+// 	transform:translateX(0);
+
+// 	&:hover{
+// 		transform:translateX(800px);
+// 	}
+// }
 
 
 
