フルスクリーンメニュー追加

--- a/scss/block.scss
+++ b/scss/block.scss
@@ -5,6 +5,14 @@
 	}
 }
 
+
+// SNSカラー
+// **************************
+
+$twitter-color : #55acee;
+$facebook-color : #3b5998;
+
+
 // 共通
 // **************************
 
@@ -18,6 +26,10 @@ article{
 		color : $light-gray;
 		padding-bottom: rem-calc(8);
 	}
+}
+
+.content{
+	margin-bottom: 2rem;
 }
 
 // トップページ
@@ -149,12 +161,6 @@ article{
 	}
 }
 
-// .kirari{
-
-
-
-// }
-
 $color: #2194E0;
 
 @keyframes sheen {
@@ -210,6 +216,82 @@ $color: #2194E0;
 	}
 }
 
+.cags-square{
+	background : url('../img/cags-fag.png');
+	width : rem-calc(40);
+	height : rem-calc(40);
+	display: inline-block;
+	background-size: cover;
+	background-position: center center;
+}
+
+.cags-round{
+	background : url('../img/cags-fag.png');
+	width : rem-calc(40);
+	height : rem-calc(40);
+	display: inline-block;
+	background-size: cover;
+	background-position: center center;
+	border-radius: 50%;
+}
+
+.twitter-round{
+	background-color: $twitter-color;
+	width : rem-calc(40);
+	text-align : center;
+	display: inline-block;
+	padding : rem-calc(8) 0 rem-calc(5);
+	border-radius: 50%;
+	transition: all .3s;
+
+	.fa-twitter{
+		color : #fff;
+		font-size: rem-calc(26);
+		line-height: 1;
+		transition: all .3s;
+
+		&:hover{
+			color : darken(#fff, 10%);
+		}
+	}
+
+	&:hover{
+		background-color: darken($twitter-color, 10%);
+	}
+}
+
+.twitter-round-shadow{
+	background    : linear-gradient($twitter-color, darken($twitter-color, 18%));
+	width         : rem-calc(40);
+	text-align    : center;
+	display       : inline-block;
+	padding       : rem-calc(6) 0 rem-calc(4);
+	border-radius : 50%;
+	transition    : all .3s;
+	border        : 1px solid darken($twitter-color, 16%);
+
+	.fa-twitter{
+		color : #fff;
+		font-size: rem-calc(26);
+		line-height: 1;
+		transition: all .3s;
+		text-shadow : 1px 1px 0 darken($twitter-color, 18%);
+
+		&:hover{
+			color : darken(#fff, 10%);
+			text-shadow : 0 0 0 darken($twitter-color, 18%);
+		}
+	}
+
+	&:hover{
+		// background-color: darken($twitter-color, 10%);
+		background    : linear-gradient(darken($twitter-color, 18%), $twitter-color);
+	}
+}
+
+
+
+
 // メニュー
 // **************************
 
@@ -227,8 +309,6 @@ $color: #2194E0;
 			bottom:0;
 			display: block;
 			transition : all .2s;
-			// box-sizing : border-box;
-			// border-bottom : 5px solid red;
 		}
 
 		&:hover{
@@ -240,82 +320,123 @@ $color: #2194E0;
 	}
 }
 
+// .overlay-door
 
-/* Effect 21: borders slight translate */
-.cl-effect-21 li{
-	float: left;
-	list-style: none;
+/* Overlay style */
+.overlay {
+	position   : fixed;
+	width      : 100%;
+	height     : 100%;
+	top        : 0;
+	left       : 0;
+	background : rgba(153,204,51,0.9);
+
+	/* Menu style */
+	nav{
+		text-align : center;
+		position   : relative;
+		top        : 50%;
+		height     : 60%;
+		transform  : translateY(-50%);
+	}
+
+	ul{
+		list-style : none;
+		padding    : 0;
+		margin     : 0 auto;
+		display    : inline-block;
+		height     : 100%;
+		position   : relative;
+
+		li{
+			display             : block;
+			height              : 20%;
+			height              : calc(100% / 5);
+			min-height          : 54px;
+			backface-visibility : hidden;
+
+			a{
+				font-size   : rem-calc(54);
+				font-weight : 300;
+				display     : block;
+				color       : #fff;
+				transition  : color .2s;
+			}
+
+			a:hover,a:focus{
+				color : #f0f0f0;
+			}
+		}
+	}
 }
 
-.cl-effect-21-wrap{
-	height:60px;
+/* Overlay closing cross */
+.overlay .overlay-close {
+	width       : rem-calc(80);
+	height      : rem-calc(80);
+	position    : absolute;
+	right       : rem-calc(20);
+	top         : rem-calc(20);
+	overflow    : hidden;
+	border      : none;
+	background  : url(../img/cross.png) no-repeat center center;
+	text-indent : 200%;
+	color       : transparent;
+	outline     : none;
+	z-index     : 100;
 }
 
-.cl-effect-21 a {
-	padding: 10px;
-	color: red;
-	font-weight: 700;
-	text-shadow: none;
-	transition: color 0.3s;
+/* Effects */
+.overlay-door {
+	visibility : hidden;
+	width      : 0;
+	left       : 50%;
+	transform  : translateX(-50%);
+	transition : width .5s .3s, visibility 0s .8s;
+
+	&.open{
+		visibility : visible;
+		width      : 100%;
+		transition : width .5s;
+	}
+
+	nav{
+		position  : absolute;
+		left      : 50%;
+		transform : translateY(-50%) translateX(-50%);
+	}
 }
 
-.cl-effect-21 a::before,
-.cl-effect-21 a::after {
-	position: absolute;
-	left: 0;
-	width: 100%;
-	height: 2px;
-	background: blue;
-	content: '';
+
+
+.overlay-door nav,
+.overlay-door .overlay-close {
+	opacity    : 0;
+	transition : opacity .3s .5s;
+}
+
+.overlay-door.open nav,
+.overlay-door.open .overlay-close {
 	opacity: 1;
-	transition: opacity 0.3s, transform 0.3s;
-	transform: translateY(0);
+	-webkit-transition-delay: 0.5s;
+	transition-delay: 0.5s;
 }
 
-// .cl-effect-21 a::before {
-// 	top: 0;
-// 	transform: translateY(-10px);
-// }
+.overlay-door.close nav,
+.overlay-door.close .overlay-close {
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
 
-// .cl-effect-21 a::after {
-// 	bottom: 0;
-// 	transform: translateY(10px);
-// }
-
-// .cl-effect-21 a:hover,
-// .cl-effect-21 a:focus {
-// 	color: red;
-// }
-
-// .cl-effect-21 a:hover::before,
-// .cl-effect-21 a:focus::before,
-// .cl-effect-21 a:hover::after,
-// .cl-effect-21 a:focus::after {
-// 	opacity: 1;
-// 	transform: translateY(0px);
-// }
-
-// .test{
-// 	height : 30px;
-// 	width : 30px;
-// 	border-radius: 100px;
-// 	background-color: $dark-gray;
-
-// 	transition : all .3s;
-// 	transform:translateX(0);
-
-// 	&:hover{
-// 		transform:translateX(800px);
-// 	}
-// }
-
-
-
-
-
-
-
-
+@media screen and (max-height: 30.5em) {
+	.overlay nav {
+		height: 70%;
+		font-size: 34px;
+	}
+	.overlay ul li {
+		min-height: 34px;
+	}
+}
 
 
 
