--- a/css/app.css
+++ b/css/app.css
@@ -3958,6 +3958,9 @@ article .article__hd {
   color: #e6e6e6;
   padding-bottom: 0.5rem; }
 
+.content {
+  margin-bottom: 2rem; }
+
 .profImg {
   height: 100%;
   width: 7.5rem;
@@ -4102,6 +4105,68 @@ article .article__hd {
       -webkit-transition: all 0.5s ease-in-out;
       transition: all 0.5s ease-in-out; }
 
+.cags-square {
+  background: url("../img/cags-fag.png");
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+  background-size: cover;
+  background-position: center center; }
+
+.cags-round {
+  background: url("../img/cags-fag.png");
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 50%; }
+
+.twitter-round {
+  background-color: #55acee;
+  width: 2.5rem;
+  text-align: center;
+  display: inline-block;
+  padding: 0.5rem 0 0.3125rem;
+  border-radius: 50%;
+  -webkit-transition: all .3s;
+  transition: all .3s; }
+  .twitter-round .fa-twitter {
+    color: #fff;
+    font-size: 1.625rem;
+    line-height: 1;
+    -webkit-transition: all .3s;
+    transition: all .3s; }
+    .twitter-round .fa-twitter:hover {
+      color: #e6e6e6; }
+  .twitter-round:hover {
+    background-color: #2795e9; }
+
+.twitter-round-shadow {
+  background: -webkit-linear-gradient(#55acee, #1581d2);
+  background: linear-gradient(#55acee, #1581d2);
+  width: 2.5rem;
+  text-align: center;
+  display: inline-block;
+  padding: 0.375rem 0 0.25rem;
+  border-radius: 50%;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  border: 1px solid #1686db; }
+  .twitter-round-shadow .fa-twitter {
+    color: #fff;
+    font-size: 1.625rem;
+    line-height: 1;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+    text-shadow: 1px 1px 0 #1581d2; }
+    .twitter-round-shadow .fa-twitter:hover {
+      color: #e6e6e6;
+      text-shadow: 0 0 0 #1581d2; }
+  .twitter-round-shadow:hover {
+    background: -webkit-linear-gradient(#1581d2, #55acee);
+    background: linear-gradient(#1581d2, #55acee); }
+
 .border-bottom li {
   float: left;
   box-sizing: border-box;
@@ -4119,35 +4184,105 @@ article .article__hd {
     height: 0.25rem;
     bottom: -0.25rem; }
 
-/* Effect 21: borders slight translate */
-.cl-effect-21 li {
-  float: left;
-  list-style: none; }
-
-.cl-effect-21-wrap {
-  height: 60px; }
-
-.cl-effect-21 a {
-  padding: 10px;
-  color: red;
-  font-weight: 700;
-  text-shadow: none;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s; }
-
-.cl-effect-21 a::before,
-.cl-effect-21 a::after {
-  position: absolute;
-  left: 0;
+/* Overlay style */
+.overlay {
+  position: fixed;
   width: 100%;
-  height: 2px;
-  background: blue;
-  content: '';
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(153, 204, 51, 0.9);
+  /* Menu style */ }
+  .overlay nav {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    height: 60%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%); }
+  .overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    height: 100%;
+    position: relative; }
+    .overlay ul li {
+      display: block;
+      height: 20%;
+      height: -webkit-calc(100% / 5);
+      height: calc(100% / 5);
+      min-height: 54px;
+      -webkit-backface-visibility: hidden;
+              backface-visibility: hidden; }
+      .overlay ul li a {
+        font-size: 3.375rem;
+        font-weight: 300;
+        display: block;
+        color: #fff;
+        -webkit-transition: color .2s;
+        transition: color .2s; }
+      .overlay ul li a:hover, .overlay ul li a:focus {
+        color: #f0f0f0; }
+
+/* Overlay closing cross */
+.overlay .overlay-close {
+  width: 5rem;
+  height: 5rem;
+  position: absolute;
+  right: 1.25rem;
+  top: 1.25rem;
+  overflow: hidden;
+  border: none;
+  background: url(../img/cross.png) no-repeat center center;
+  text-indent: 200%;
+  color: transparent;
+  outline: none;
+  z-index: 100; }
+
+/* Effects */
+.overlay-door {
+  visibility: hidden;
+  width: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: width .5s .3s, visibility 0s .8s;
+  transition: width .5s .3s, visibility 0s .8s; }
+  .overlay-door.open {
+    visibility: visible;
+    width: 100%;
+    -webkit-transition: width .5s;
+    transition: width .5s; }
+  .overlay-door nav {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+        -ms-transform: translateY(-50%) translateX(-50%);
+            transform: translateY(-50%) translateX(-50%); }
+
+.overlay-door nav,
+.overlay-door .overlay-close {
+  opacity: 0;
+  -webkit-transition: opacity .3s .5s;
+  transition: opacity .3s .5s; }
+
+.overlay-door.open nav,
+.overlay-door.open .overlay-close {
   opacity: 1;
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-  transition: opacity 0.3s, -webkit-transform 0.3s;
-  transition: opacity 0.3s, transform 0.3s;
-  transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
-  -webkit-transform: translateY(0);
-      -ms-transform: translateY(0);
-          transform: translateY(0); }
+  -webkit-transition-delay: 0.5s;
+  transition-delay: 0.5s; }
+
+.overlay-door.close nav,
+.overlay-door.close .overlay-close {
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s; }
+
+@media screen and (max-height: 30.5em) {
+  .overlay nav {
+    height: 70%;
+    font-size: 34px; }
+  .overlay ul li {
+    min-height: 34px; } }
