--- a/scss/block.scss
+++ b/scss/block.scss
@@ -379,7 +379,8 @@ $color: #2194E0;
 	top         : rem-calc(20);
 	overflow    : hidden;
 	border      : none;
-	background  : url(../img/cross.png) no-repeat center center;
+	// background  : url(../img/cross.png) no-repeat center center;
+	content     : 'close';
 	text-indent : 200%;
 	color       : transparent;
 	outline     : none;
