--- a/scss/block.scss
+++ b/scss/block.scss
@@ -16,6 +16,15 @@ $facebook-color : #3b5998;
 // 共通
 // **************************
 
+.headerLogo{
+	background : url('../img/sandbox-logo.png') no-repeat;
+	background-size: contain;
+	color : transparent;
+	font-size: 0;
+	text-shadow: none;
+	height : rem-calc(60);
+	// width
+}
 .headerLead{
 	font-size: rem-calc(16);
 	margin-bottom: rem-calc(24);
@@ -439,9 +448,15 @@ $color: #2194E0;
 	}
 }
 
+// ポップアップ
+// **************************
 
-
-
+.balloon.regist02{
+	padding : rem-calc(12);
+	opacity : .9;
+	border-radius: rem-calc(3);
+	box-shadow: rem-calc(1) rem-calc(1) rem-calc(1) rgba(black, .3);
+}
 
 
 
