--- a/scss/block.scss
+++ b/scss/block.scss
@@ -5,6 +5,9 @@
 	}
 }
 
+.height{
+	height : rem-calc(20);
+}
 
 // SNSカラー
 // **************************
@@ -16,15 +19,15 @@ $facebook-color : #3b5998;
 // 共通
 // **************************
 
-.headerLogo{
-	background : url('../img/sandbox-logo.png') no-repeat;
-	background-size: contain;
-	color : transparent;
-	font-size: 0;
-	text-shadow: none;
-	height : rem-calc(60);
+// .headerLogo{
+	// background : url('../img/sandbox-logo.png') no-repeat;
+	// background-size: contain;
+	// color : transparent;
+	// font-size: 0;
+	// text-shadow: none;
+	// height : rem-calc(60);
 	// width
-}
+// }
 .headerLead{
 	font-size: rem-calc(16);
 	margin-bottom: rem-calc(24);
@@ -182,45 +185,45 @@ $color: #2194E0;
 }
 
 .kirariWrap {
-	display: block;
-	position: absolute;
-	transform: translate(-50%, -50%);
+	display   : block;
+	position  : absolute;
+	transform : translate(-50%, -50%);
 }
 
 .kirari {
-	padding: rem-calc(10) rem-calc(14);
-	text-align: center;
-	text-decoration: none;
-	color: $color;
-	border: 2px solid $color;
-	font-size: 24px;
-	display: inline-block;
-	border-radius: 0.3em;
-	transition: all 0.2s ease-in-out;
-	position: relative;
-	overflow: hidden;
+	padding         : rem-calc(10) rem-calc(14);
+	text-align      : center;
+	text-decoration : none;
+	color           : $color;
+	border          : 2px solid $color;
+	font-size       : 24px;
+	display         : inline-block;
+	border-radius   : 0.3em;
+	transition      : all 0.2s ease-in-out;
+	position        : relative;
+	overflow        : hidden;
 
 	&:before {
-		content: "";
-		background-color: rgba(255,255,255,0.5);
-		height: 100%;
-		width: 3em;
-		display: block;
-		position: absolute;
-		top: 0;
-		left: -4.5em;
-		transform: skewX(-45deg) translateX(0);
-		transition: none;
+		content          : "";
+		background-color : rgba(255,255,255,0.5);
+		height           : 100%;
+		width            : 3em;
+		display          : block;
+		position         : absolute;
+		top              : 0;
+		left             : -4.5em;
+		transform        : skewX(-45deg) translateX(0);
+		transition       : none;
 	}
 
 	&:hover {
-		background-color: $color;
-		color: #fff;
-		border-bottom: 4px solid darken($color, 10%);
+		background-color : $color;
+		color            : #fff;
+		border-bottom    : 4px solid darken($color, 10%);
 
 		&:before {
-			transform: skewX(-45deg) translateX(13.5em);
-			transition: all 0.5s ease-in-out;
+			transform  : skewX(-45deg) translateX(13.5em);
+			transition : all 0.5s ease-in-out;
 		}
 	}
 }
@@ -451,11 +454,52 @@ $color: #2194E0;
 // ポップアップ
 // **************************
 
-.balloon.regist02{
-	padding : rem-calc(12);
-	opacity : .9;
-	border-radius: rem-calc(3);
-	box-shadow: rem-calc(1) rem-calc(1) rem-calc(1) rgba(black, .3);
+// .balloon.regist02{
+// 	padding : rem-calc(12);
+// 	opacity : .9;
+// 	border-radius: rem-calc(3);
+// 	box-shadow: rem-calc(1) rem-calc(1) rem-calc(1) rgba(black, .3);
+// }
+
+// グラデーション
+// **************************
+
+.globalWrapper-gradient{
+	.column{
+		height : rem-calc(120);
+		&.cags{
+			background : linear-gradient(to left, #ff07b7, #e1ff00);
+		}
+	}
+}
+
+// ランディング
+// **************************
+
+#glovalContainer{
+	background-color: blue;
+}
+
+// アニメーション
+// **************************
+
+.globalWrapper-animation{
+	.wave{
+		width: rem-calc(300);
+		height: rem-calc(300);
+		position: absolute;
+		top: 0;
+
+		&.one{
+			background-color : rgba(255, 0, 0, .3);
+		}
+		&.two{
+			background-color : rgba(0, 255, 0, .3);
+		}
+		&.three{
+			background-color : rgba(0, 0, 255, .3);
+		}
+	}
 }
 
 
