--- a/css/app.css
+++ b/css/app.css
@@ -4302,23 +4302,119 @@ article .article__hd {
     background: -webkit-linear-gradient(right, #ff07b7, #e1ff00);
     background: linear-gradient(to left, #ff07b7, #e1ff00); }
 
-.test {
-  position: absolute;
-  left: 50%;
-  -webkit-transition: all .3s;
-  transition: all .3s; }
+@-webkit-keyframes bounce {
+  from, 20%, 53%, 80%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+            animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); }
+  40%, 43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+            animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+            transform: translate3d(0, -30px, 0); }
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+            animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+            transform: translate3d(0, -15px, 0); }
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+            transform: translate3d(0, -4px, 0); } }
 
-.testes:hover .test {
-  position: absolute;
-  left: 30%; }
+@keyframes bounce {
+  from, 20%, 53%, 80%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+            animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); }
+  40%, 43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+            animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+            transform: translate3d(0, -30px, 0); }
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+            animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+            transform: translate3d(0, -15px, 0); }
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+            transform: translate3d(0, -4px, 0); } }
+
+.globalWrapper-landing #headerLogo {
+  width: 25rem; }
+  .globalWrapper-landing #headerLogo .logo-i {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-l1 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-l2 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-u {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-s {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-t1 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-r1 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-a {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-t2 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-o {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
+  .globalWrapper-landing #headerLogo .logo-r2 {
+    -webkit-animation: bounce 3s;
+            animation: bounce 3s;
+    -webkit-transform-origin: center bottom;
+        -ms-transform-origin: center bottom;
+            transform-origin: center bottom; }
 
 .globalWrapper-landing .landingHeader {
-  padding: 4rem 0 2rem; }
-  .globalWrapper-landing .landingHeader .title {
-    font-size: 3rem;
-    margin: 0 0 0 0;
-    line-height: 1.6; }
+  padding: 4rem 0 8rem; }
   .globalWrapper-landing .landingHeader .lead {
+    font-family: "游ゴシック", YuGothic, "メイリオ", Meiryo, "ヒラギノ角ゴ Pro", Hiragino Kaku Gothic Pro, sans-serif;
     font-size: 0.875rem;
     margin: 0 0 0 0;
     line-height: 1.6; }
@@ -4349,9 +4445,18 @@ article .article__hd {
     top: 0;
     -webkit-transition: all .3s;
     transition: all .3s; }
+  .globalWrapper-landing .author__inner .en {
+    font-size: 1rem;
+    font-weight: bold; }
+  .globalWrapper-landing .author__inner .ja {
+    font-size: 0.875rem;
+    font-weight: bold; }
   .globalWrapper-landing .author__inner:hover .author__text {
     position: relative;
-    top: -40px; }
+    top: -83px;
+    color: white;
+    background-color: red;
+    margin: 0; }
 
 .globalWrapper-animation .wave {
   width: 18.75rem;
