--- a/scss/block.scss
+++ b/scss/block.scss
@@ -487,32 +487,133 @@ $color: #2194E0;
 // **************************
 
 
-.test{
-	position: absolute;
-	left: 50%;
-	transition : all .3s;
-}
+// .test{
+// 	position: absolute;
+// 	left: 50%;
+// 	transition : all .3s;
+// }
 
 
-.testes:hover{
+// .testes:hover{
 
-	.test{
-		position: absolute;
-		left: 30%;
-	}
-}
+// 	.test{
+// 		position: absolute;
+// 		left: 30%;
+// 	}
+// }
 
 .globalWrapper-landing{
 
-	.landingHeader{
-		padding : rem-calc(64) 0 rem-calc(32);
+	// ロゴのアニメーション
 
-		.title{
-			font-size : rem-calc(48);
-			margin : 0 0 0 0;
-			line-height: 1.6;
+// 	.animated {
+//   -webkit-animation-duration: 1s;
+//   animation-duration: 1s;
+//   -webkit-animation-fill-mode: both;
+//   animation-fill-mode: both;
+// }
+
+// .animated.infinite {
+//   -webkit-animation-iteration-count: infinite;
+//   animation-iteration-count: infinite;
+// }
+
+// .animated.hinge {
+//   -webkit-animation-duration: 2s;
+//   animation-duration: 2s;
+// }
+
+// .animated.flipOutX,
+// .animated.flipOutY,
+// .animated.bounceIn,
+// .animated.bounceOut {
+//   -webkit-animation-duration: .75s;
+//   animation-duration: .75s;
+// }
+
+@keyframes bounce {
+from, 20%, 53%, 80%, to {
+animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+transform: translate3d(0,0,0);
+}
+
+40%, 43% {
+animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+transform: translate3d(0, -30px, 0);
+}
+
+70% {
+animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+transform: translate3d(0, -15px, 0);
+}
+
+90% {
+transform: translate3d(0,-4px,0);
+}
+}
+
+	#headerLogo{
+		width : rem-calc(400);
+		// margin-bottom : rem-calc(16);
+		// fill : transparent;
+
+		.logo-i{
+			animation : bounce 3s;
+			transform-origin : center bottom;
 		}
+		.logo-l1{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-l2{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-u{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-s{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-t1{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-r1{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-a{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-t2{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-o{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+		.logo-r2{
+			animation : bounce 3s;
+			transform-origin : center bottom;
+		}
+	}
+
+	.landingHeader{
+		padding : rem-calc(64) 0 rem-calc(128);
+
+		// .title{
+		// 	// font-family: ;
+		// 	font-size : rem-calc(48);
+		// 	margin : 0 0 0 0;
+		// 	line-height: 1.6;
+		// }
 		.lead{
+			font-family: "游ゴシック", YuGothic, "メイリオ", Meiryo, "ヒラギノ角ゴ Pro", Hiragino Kaku Gothic Pro, sans-serif;
 			font-size : rem-calc(14);
 			margin : 0 0 0 0;
 			line-height: 1.6;
@@ -546,16 +647,29 @@ $color: #2194E0;
 	.author__inner{
 		display: inline-block;
 
+		// 画面外で隠れている
 		.author__text{
 			position: relative;
 			top : 0;
 			transition : all .3s;
 		}
 
+		.en{
+			font-size: rem-calc(16);
+			font-weight: bold;
+		}
+		.ja{
+			font-size: rem-calc(14);
+			font-weight: bold;
+		}
+
 		&:hover{
 			.author__text{
 				position: relative;
-				top : -40px;
+				top : -83px;
+				color : white;
+				background-color: red;
+				margin : 0;
 			}
 		}
 	}
