--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,29 @@
-html {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+body {
+  background-color: #ffffff;
+}
+
+@media screen and (min-width: 400px) {
+  body {
+    background-color: blue;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    background-color: red;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    background-color: green;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    background-color: yellow;
+  }
 }
 
 /*# sourceMappingURL=../maps/index.css.map */
