--- a/template/scss/style.scss
+++ b/template/scss/style.scss
@@ -2,4 +2,25 @@
 
 html, body {
     background-color: green;
+    display: flex;
+}
+
+.hoge {
+  width: 240px;
+}
+ 
+@media screen and (min-width: 768px) {
+  .hoge {
+    width: 576px;
+  }
+}
+ 
+.fuga {
+  width: 160px;
+}
+ 
+@media screen and (min-width: 768px) {
+  .fuga {
+    width: 384px;
+  }
 }
